fixed an issue with orders header on mobile and candle topsection on mobile

--- a/packages/augur-ui/src/modules/market-charts/components/candlestick/outcome-candlestick.styles.less
+++ b/packages/augur-ui/src/modules/market-charts/components/candlestick/outcome-candlestick.styles.less
@@ -54,8 +54,9 @@
     width: 100%;
 
     @media @breakpoint-mobile {
-      order: 2;
+      margin-left: auto;
       max-height: @size-24;
+      order: 2;
     }
   }
 }
